apps/base/logging-fluentbit/deploy/daemonSet.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  labels:
    kubernetes.io/cluster-service: "true"
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fluent-bit
      app.kubernetes.io/component: fluent-bit
      kubernetes.io/cluster-service: "true"
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fluent-bit
        app.kubernetes.io/component: fluent-bit
        kubernetes.io/cluster-service: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "2020"
        prometheus.io/path: /api/v1/metrics/prometheus
    spec:
      containers:
      - name: fluent-bit
        image: "registry.lan/fluent-bit:2.0.9"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2020
          name: metrics
        securityContext:
          # Run as root to be able to read host logs
          #runAsNonRoot: true
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
          readOnly: true
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc/
        - name: certs-volume
          mountPath: /fluent-bit/certs
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /api/v1/metrics/prometheus
            port: metrics
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 50m
            memory: 16Mi
          limits:
            cpu: 500m
            memory: 64Mi
      terminationGracePeriodSeconds: 10
      volumes:
      - name: tz-config
        hostPath:
          path: /etc/localtime
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: fluent-bit-config
        configMap:
          name: fluent-bit-config
      - name: certs-volume
        secret:
          secretName: fluent-bit-certs
      serviceAccountName: fluent-bit
      imagePullSecrets:
      - name: docker-config
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      - key: "specific-worker-type"
        operator: Exists
        effect: NoSchedule
