apps/base/logging-fluentbit/deploy/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluent-bit-prometheus
  labels:
    prometheus-target: fluent-bit
spec:
  ports:
  - port: 2020
    name: metrics
    targetPort: metrics
  selector:
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/component: fluent-bit
