apps/base/logging-fluentbit/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-fluentbit
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: fluent-bit
      app.kubernetes.io/component: fluent-bit

  ingress:
    # Allow from prometheus
    - ports:
        - port: metrics
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/component: prometheus
              app.kubernetes.io/instance: k8s
              app.kubernetes.io/name: prometheus
